force-app/main/default/objects/LeanData__Quarterly_Metric__c/LeanData__Quarterly_Metric__c.object-meta.xml
<CustomObject>
    <label>Quarterly Metric</label>
    <nameField>
        <label>Quarterly Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarterly Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>