force-app/main/default/objects/LeanData__Quarterly_Metric__c/fields/LeanData__Marketing_Sourced_Bookings_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Marketing_Sourced_Bookings_Percentage__c</fullName>
    <formula>IF( LeanData__Total_Bookings__c = 0, 0 , LeanData__Marketing_Sourced_Bookings__c / LeanData__Total_Bookings__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Sourced Bookings Percentage</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>