force-app/main/default/objects/LeanData__Quarterly_Metric__c/fields/LeanData__Opportunities_Created__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Opportunities_Created__c</fullName>
    <label>Opportunities Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>