force-app/main/default/objects/LeanData__Quarterly_Metric__c/fields/LeanData__Quarterly_Pipeline_Goal__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Quarterly_Pipeline_Goal__c</fullName>
    <label>Quarterly Pipeline Goal</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>